# Crux

./: .gitignore  .pre-commit-config.yaml  convert_checkpoint.py  pyproject.toml  pytest.ini  wrangler.toml
.github/workflows/: ci.yml
app/: main.py  storage.py  tf2_magenta_model.py  transcriber.py
src/: worker.py
src/app/: main.py  transcriber.py
src/cli/: convert.py
static/: index.html
ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js
ui/e2e/: comprehensive-e2e.spec.ts  simple-e2e.spec.ts
ui/src/: App.svelte
ui/src/components/: FileUpload.svelte  JobCard.svelte  JobsList.svelte  MidiPreview.svelte  Toast.svelte
ui/src/stores/: jobs.ts  midi.ts  toast.ts
